--- a/css/main.css
+++ b/css/main.css
@@ -1153,6 +1153,12 @@ span{
 	#friday{
 		padding-left: 0;
 	}
+	#schedule-link{
+		display: none;
+	}
+	#explore-link{
+		display: none;
+	}
 }
 
 
