--- a/assets/css/fall2016/main.css
+++ b/assets/css/fall2016/main.css
@@ -1062,10 +1062,10 @@ span{
     -o-transition: all .2s ease-in;
     -webkit-transition: all .2s ease-in;
     transition: all .2s ease-in;
-	opacity: 0;	
+	opacity: 0.8;	
 	/*display: none;*/
-	z-index: 998;
-	height: calc(100vh - 130px);
+	z-index: 2147483647;
+	height: 60px;
 }
 
 /*.announcement-block-hidden{
@@ -1081,6 +1081,12 @@ span{
 	/*display: block;*/
 	opacity: 0.8;
 }
+
+.announcement-block-tall{
+	height: calc(100vh - 130px);
+}
+
+.announcement-block-tall-push{}
 
 .announcement-block-active:hover{
 	/*opacity: 1;*/
