--- a/assets/css/fall2016/main.css
+++ b/assets/css/fall2016/main.css
@@ -1046,13 +1046,10 @@ span{
     transition: all .2s ease-in;
 	display: block;
 	position: fixed;
-	bottom: 0;
-	padding: 20px 0px 20px 0px;
-	right: 40px;
 	background-color: #ffffff;
 	overflow: auto;
 	
-	width: 260px;
+	
 	
 	/*border-top-left-radius: 5px;*/
 	/*border-top-right-radius: 5px;*/
@@ -1063,9 +1060,13 @@ span{
     -webkit-transition: all .2s ease-in;
     transition: all .2s ease-in;
 	opacity: 0.8;	
+	padding: 20px 0px;
 	/*display: none;*/
 	z-index: 2147483647;
 	height: 60px;
+	bottom: 0;
+	width: 260px;
+	right: 40px;
 }
 
 /*.announcement-block-hidden{
@@ -1159,6 +1160,7 @@ span{
 .announcement-header{
 	cursor: pointer;
 	text-align: center;
+	margin: 20px 0px;
 	padding-bottom: 10px;
 }
 
@@ -1201,6 +1203,10 @@ span{
 	padding-left: 20px;
 	font-size: 12px;
 	color: rgba(0,0,0,0.9);
+}
+
+.announcements-link{
+	display: none;
 }
 
 .tech-side-color{
@@ -1666,9 +1672,53 @@ span{
 	#directions-view{
 		display: none;
 	}
-	#announcement-block{
+	.announcement-block{
+		-moz-transition: height 999999999999s ease-in;
+	    -o-transition: height 999999999999s ease-in;
+	    -webkit-transition: height 999999999999s ease-in;
+	    transition: height 999999999999s ease-in;
+		/*height: calc(100vh - 60px);*/
+		opacity: 1;
+		width: 100vw;
+		bottom: 60px;
+		display: block;
+		height: 0;
+		padding: 0px 0px 0px 0px;
+		/*margin-bottom: 20px;*/
+		/*bottom:160px;*/
+		left: 0;
+	}
+
+	#register-link{
 		display: none;
 	}
+
+	#announcements-link{
+		top: auto;
+		left: auto;
+		display: block;
+		cursor: pointer;
+		height: 100%;
+		width: calc(100%/3);
+		position: relative;
+		float: left;
+		z-index: 999;
+		padding-bottom: 0;
+	}
+
+	.announcement-minimizer-2{
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
+		/*padding-bottom: 10px;*/
+	}
+
+	.announcement-minimizer{
+		/*padding-bottom: 10px;*/
+	}
+
+	.announcement-body{
+		width: calc(100% - 20px - 20px);
+	}
+
 
 }
 
