--- a/assets/css/fall2016/main.css
+++ b/assets/css/fall2016/main.css
@@ -1716,6 +1716,7 @@ span{
 	}
 
 	.announcement-minimizer{
+		-webkit-tap-highlight-color: rgba(0,0,0,0);
 		/*padding-bottom: 10px;*/
 		-moz-transition: height 999999999999s ease-in;
 	    -o-transition: height 999999999999s ease-in;
